--- a/content/main-window.ui
+++ b/content/main-window.ui
@@ -1,24 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
 	<template class="MainWindow" parent="AdwApplicationWindow">
-		<property name="width-request">500</property>
-		<property name="title">Password Manager</property>
+		<property name="width-request">800</property>
+		<property name="height-request">500</property>
+		<property name="title" translatable="yes">Password Manager</property>
 		<child>
-			<object class="GtkBox">
-				<property name="orientation">vertical</property>
+			<object class="AdwLeaflet" id="leaflet">
+				<property name="can-swipe-back">True</property>
 				<property name="hexpand">True</property>
-				<child>
-					<object class="AdwHeaderBar"></object>
-				</child>
-				<child>
-					<object class="GtkButton" id="button">
-						<property name="label">Press me!</property>
-						<property name="margin-top">12</property>
-						<property name="margin-bottom">12</property>
-						<property name="margin-start">12</property>
-						<property name="margin-end">12</property>
-					</object>
-				</child>
+				<child></child>
+				<child></child>
+				<child></child>
 			</object>
 		</child>
 	</template>
