--- a/content/main-window.ui
+++ b/content/main-window.ui
@@ -1,16 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
 	<template class="MainWindow" parent="AdwApplicationWindow">
-		<property name="width-request">800</property>
-		<property name="height-request">500</property>
+		<property name="width-request">200</property>
+		<property name="height-request">200</property>
 		<property name="title" translatable="yes">Password Manager</property>
 		<child>
 			<object class="AdwLeaflet" id="leaflet">
-				<property name="can-swipe-back">True</property>
+				<property name="can-navigate-back">True</property>
 				<property name="hexpand">True</property>
-				<child></child>
-				<child></child>
-				<child></child>
+				<child>
+					<object class="GtkBox">
+						<property name="width-request">200</property>
+						<property name="orientation">vertical</property>
+						<child>
+							<object class="AdwHeaderBar">
+								<binding name="show-end-title-buttons">
+									<lookup name="folded">leaflet</lookup>
+								</binding>
+								<property name="title-widget">
+									<object class="AdwWindowTitle">
+										<property name="title">Passwords</property>
+									</object>
+								</property>
+							</object>
+						</child>
+						<child>
+							<object class="GtkListBox">
+								<property name="selection-mode">single</property>
+								<property name="hexpand">True</property>
+								<property name="margin-top">24</property>
+								<property name="margin-bottom">24</property>
+								<property name="margin-start">12</property>
+								<property name="margin-end">12</property>
+								<style>
+									<class name="boxed-list" />
+								</style>
+								<child>
+									<object class="AdwActionRow">
+										<property name="title">Google</property>
+									</object>
+								</child>
+								<child>
+									<object class="AdwActionRow">
+										<property name="title">Facebook</property>
+									</object>
+								</child>
+							</object>
+						</child>
+					</object>
+				</child>
+				<child>
+					<object class="AdwLeafletPage">
+						<property name="navigatable">False</property>
+						<property name="child">
+							<object class="GtkSeparator" />
+						</property>
+					</object>
+				</child>
+				<child>
+					<object class="GtkBox">
+						<property name="width-request">300</property>
+						<property name="orientation">vertical</property>
+						<child>
+							<object class="AdwHeaderBar">
+								<binding name="show-start-title-buttons">
+									<lookup name="folded">leaflet</lookup>
+								</binding>
+								<child>
+									<object class="GtkButton">
+										<binding name="visible">
+											<lookup name="folded">leaflet</lookup>
+										</binding>
+										<property name="icon-name">go-previous-symbolic</property>
+									</object>
+								</child>
+								<property name="title-widget">
+									<object class="AdwWindowTitle">
+										<property name="title">Entry</property>
+									</object>
+								</property>
+							</object>
+						</child>
+						<child>
+							<object class="GtkListBox">
+								<property name="selection-mode">single</property>
+								<property name="hexpand">True</property>
+								<property name="margin-top">24</property>
+								<property name="margin-bottom">24</property>
+								<property name="margin-start">12</property>
+								<property name="margin-end">12</property>
+								<style>
+									<class name="boxed-list" />
+								</style>
+								<child>
+									<object class="AdwEntryRow">
+										<property name="title">Email</property>
+									</object>
+								</child>
+								<child>
+									<object class="AdwPasswordEntryRow">
+										<property name="title">Password</property>
+									</object>
+								</child>
+							</object>
+						</child>
+					</object>
+				</child>
 			</object>
 		</child>
 	</template>
