--- a/content/password-list.ui
+++ b/content/password-list.ui
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="PasswordList" parent="GtkBox">
+    <property name="width-request">200</property>
     <child>
       <object class="GtkBox">
         <property name="orientation">vertical</property>
