--- a/content/main-window.ui
+++ b/content/main-window.ui
@@ -8,7 +8,11 @@
       <object class="AdwLeaflet" id="leaflet">
         <property name="can-navigate-back">True</property>
         <child>
-          <object class="PasswordList" id="password_list" />
+          <object class="PasswordList" id="password_list">
+            <binding name="show-end-title-buttons">
+              <lookup name="folded">leaflet</lookup>
+            </binding>
+          </object>
         </child>
         <child>
           <object class="AdwLeafletPage">
@@ -19,7 +23,14 @@
           </object>
         </child>
         <child>
-          <object class="FieldList" id="field_list" />
+          <object class="FieldList" id="field_list">
+            <binding name="show-start-title-buttons">
+              <lookup name="folded">leaflet</lookup>
+            </binding>
+            <binding name="show-back-button">
+              <lookup name="folded">leaflet</lookup>
+            </binding>
+          </object>
         </child>
       </object>
     </child>
