--- a/content/password-list.ui
+++ b/content/password-list.ui
@@ -15,7 +15,7 @@
           </object>
         </child>
         <child>
-          <object class="GtkListBox">
+          <object class="GtkListBox" id="list_box">
             <property name="selection-mode">single</property>
             <property name="hexpand">True</property>
             <property name="margin-top">24</property>
