--- a/content/password-list.ui
+++ b/content/password-list.ui
@@ -18,12 +18,12 @@
           <object class="GtkListBox" id="list_box">
             <property name="selection-mode">single</property>
             <property name="hexpand">True</property>
-            <property name="margin-top">24</property>
+            <!-- <property name="margin-top">24</property>
             <property name="margin-bottom">24</property>
             <property name="margin-start">12</property>
-            <property name="margin-end">12</property>
+            <property name="margin-end">12</property> -->
             <style>
-              <class name="boxed-list"/>
+              <class name="navigation-sidebar" />
             </style>
             <child>
               <object class="AdwActionRow">
