--- a/resources/window.ui
+++ b/resources/window.ui
@@ -25,7 +25,7 @@
                     <property name="vexpand">True</property>
                     <property name="child">
                       <object class="AdwStatusPage">
-                        <property name="icon-name">checkbox-checked-symbolic</property>
+                        <property name="icon-name">dialog-password-symbolic</property>
                         <property name="title" translatable="yes">No Logins</property>
                         <property name="description" translatable="yes">Create a login to start using the app.</property>
                         <property name="child">
@@ -34,6 +34,47 @@
                             <property name="use-underline">True</property>
                             <property name="halign">center</property>
                             <property name="action-name">win.new-login</property>
+                            <style>
+                              <class name="pill" />
+                              <class name="suggested-action" />
+                            </style>
+                          </object>
+                        </property>
+                      </object>
+                    </property>
+                  </object>
+                </child>
+              </object>
+            </property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkStackPage">
+            <property name="name">password-placeholder</property>
+            <property name="child">
+              <object class="GtkBox">
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkHeaderBar">
+                    <style>
+                      <class name="flat" />
+                    </style>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkWindowHandle">
+                    <property name="vexpand">True</property>
+                    <property name="child">
+                      <object class="AdwStatusPage">
+                        <property name="icon-name">system-lock-screen-symbolic</property>
+                        <property name="title" translatable="yes">Unlock Vault</property>
+                        <property name="description" translatable="yes">Unlock the vault to start using the app.</property>
+                        <property name="child">
+                          <object class="GtkButton">
+                            <property name="label" translatable="yes">_Unlock Vault</property>
+                            <property name="use-underline">True</property>
+                            <property name="halign">center</property>
+                            <property name="action-name">win.unlock-vault</property>
                             <style>
                               <class name="pill" />
                               <class name="suggested-action" />
